stateDiagram-v2
    title Жизненный цикл подписки Bagsy

    [*] --> trial: Регистрация<br/>(2 месяца бесплатно)

    trial --> active: Оплатил подписку<br/>(до или после trial)
    trial --> past_due: Trial истёк,<br/>не оплатил

    active --> active: Успешное продление
    active --> past_due: Платёж не прошёл

    past_due --> active: Оплатил<br/>(в течение 7 дней)
    past_due --> suspended: 7 дней без оплаты

    suspended --> active: Оплатил<br/>(данные сохранены)
    suspended --> canceled: 90 дней без оплаты

    canceled --> [*]: Данные удалены

    note right of trial
        Полный функционал тарифа.
        Напоминания об оплате за 14 и 7 дней.
    end note

    note right of past_due
        Полный функционал сохраняется.
        Баннер "Оплатите подписку".
        3 попытки автосписания (каждые 3 дня).
    end note

    note right of suspended
        READ-ONLY режим:
        ❌ Нельзя создавать записи
        ❌ Нельзя добавлять сотрудников
        ✅ Можно просматривать данные
        ✅ Клиенты НЕ могут записываться
        Баннер "Организация заблокирована".
    end note

    note right of canceled
        Данные хранятся 90 дней.
        После — безвозвратное удаление.
        Owner может восстановить до удаления.
    end note
